--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,22 @@ flutter:
 
   assets:
     - assets/
+
+  fonts:
+    - family: Manrope
+      fonts:
+        - asset: fonts/Manrope-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Manrope-Light.ttf
+          weight: 300
+        - asset: fonts/Manrope-Regular.ttf
+          weight: 400
+        - asset: fonts/Manrope-Medium.ttf
+          weight: 500
+        - asset: fonts/Manrope-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Manrope-Bold.ttf
+          weight: 700
+        - asset: fonts/Manrope-ExtraBold.ttf
+          weight: 800
+
