--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dynamic_color: ^1.6.5
   provider: ^6.0.5
   shared_preferences: ^2.1.1
+  dartz: ^0.10.1
   lottie: ^2.3.2
   concentric_transition: ^1.0.3
   social_login_buttons: ^1.0.7
